# spymaster

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  backtest_multi_percentile.py  check_cuda.py  evaluate.py  lejepa-summary.txt  main.py  manage.py  populate_cache.py  probe_horizons.py  pyproject.toml  pytest.ini  run_tests.py  train.py  visualize_embeddings.py
commands/: __init__.py  data.py  datasets.py  market_calendar.py
reports/: backtest_dual_20240603_20240801.html  backtest_dual_20240603_20241129.html
scripts/: backfill_daily.py  backfill_oi.py  compute_percentile_thresholds.py  convert_timestamps_to_utc.py  migrate_checkpoints_to_db.py  migrate_data_structure.py  rebuild_gex_training.py  reprocess_gex_flow.py
src/backtest/: __init__.py  engine.py  html_report.py  multi_percentile.py  multiscale_backtest.py  report.py  results.py  runner.py  types.py
src/db/: __init__.py  database.py  models.py
src/execution/: __init__.py  alpaca_client.py  data_buffer.py  filtered_executor.py  heuristic.py  live_trader.py  options_provider.py  order_manager.py  position_manager.py  signal_logger.py  (+2 more)
tests/: test_backtest_baseline.py  test_data_processing.py  test_end_to_end.py  test_event_bus.py  test_gex_flow_engine.py  test_live_parity.py  test_loader_worker.py  test_logging.py  test_model.py  test_thetadata_client.py
train/: __init__.py  common.py  entry.py  jepa.py  masked_policy.py  visualization.py
visualizations/: pca_context_epoch20.txt  pca_context_epoch3.txt  pca_predicted_epoch20.txt  pca_predicted_epoch3.txt
webui/: app.py
(+45 files in other folders)
